--- a/about.html
+++ b/about.html
@@ -22,21 +22,20 @@
         <div id="content">
             <h1>About</h1>
 
-            <p>Hi! I am Markus Hauck and this is my personal site. I am a German computer science student at TU Darmstadt and live near Frankfurt.</p>
-<p>I love programming! You can find me on <a href="https://github.com/markus1189">github</a>.</p>
+            <p>Hi! I am Markus Hauck and this is my personal site. I studied computer science at the TU Darmstadt from 2010 to 2015. Currently, I live and work near Frankfurt am Main, Germany.</p>
+<p>I love programming! You can find me on - <a href="https://github.com/markus1189">github</a> - <a href="https://stackoverflow.com/users/566890/markus1189">stackoverflow</a></p>
 <h2 id="interests">Interests</h2>
-<p>Some buzzwords related to my current interests:</p>
+<p>Some of my current interests:</p>
 <ul>
 <li>Emacs</li>
-<li>Haskell</li>
 <li>Type Theory</li>
-<li>Programming Languages</li>
-<li>Functional Programming</li>
+<li>Programming Languages: Haskell, Scala</li>
+<li>Functional Programming, concepts and ideas</li>
 </ul>
 <h2 id="academic-work">Academic work</h2>
 <ul>
 <li>Bachelor Thesis: <a href="./docs/hauck-bsc-staging-reactive-programming.pdf">Staging Reactive Programming</a></li>
-<li>Master Thesis: currently in work</li>
+<li>Master Thesis: <a href="./docs/hauck-msc-platform-secure-distributed-programming.pdf">A Platform for Secure Distributed Programming</a></li>
 </ul>
         </div>
         <div id="footer">
